Revert "fixed hove problem on mobile"
This reverts commit d5e9952ee6e22267c4a907e5bc506d46430a48e4.

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -573,8 +573,6 @@ header .layout-wide {
 /*  THIS SHOULD BE CHANGED TO MOBILE FIRST  */
 
 /* Dropdown Button */
-
-
 .dropbtn {
   background-color: var(--alternative-bg-color);
   color: var(--alternative-text-color);
@@ -625,6 +623,7 @@ header .layout-wide {
   transition: var(--transition-time);
   display: block;
 }
+
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
  /* background-color: var(--color-mid-grey); */
@@ -934,7 +933,7 @@ header .layout-wide {
       overflow: hidden;
       transition: var(--transition-time);
 
-      display: block;   /*changed to block from none when hiding without hover or click*/
+      display: none;   /*changed to block from none when hiding without hover or click*/
       position: relative;
       left: 20px;
       right: float;
@@ -955,7 +954,7 @@ header .layout-wide {
       overflow: hidden;
       transition: var(--transition-time);
 
-      display: block;   /*changed from none when hiding without hover or click*/
+      display: none;   /*changed from none when hiding without hover or click*/
       position: relative;
       left: 20px;
       right: float;
@@ -976,7 +975,7 @@ header .layout-wide {
       overflow: hidden;
       transition: var(--transition-time);
 
-      display: block;   /*changed from none when hiding without hover or click*/
+      display: none;   /*changed from none when hiding without hover or click*/
       position: relative;
       left: 20px;
       right: float;
@@ -997,7 +996,7 @@ header .layout-wide {
       overflow: hidden;
       transition: var(--transition-time);
 
-      display: block;   /*changed from none when hiding without hover or click*/
+      display: none;   /*changed from none when hiding without hover or click*/
       position: relative;
       left: 20px;
       right: float;
@@ -1018,7 +1017,7 @@ header .layout-wide {
       overflow: hidden;
       transition: var(--transition-time);
 
-      display: block;   /*changed from none when hiding without hover or click*/
+      display: none;   /*changed from none when hiding without hover or click*/
       position: relative;
       left: 20px;
       right: float;
